--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   --dark: #333;
   --light: #fff;
   --orange: #ff8c00;
-  --shadow: 2px 2px 5px rgba(255, 150, 0, 0.8);
+  --shadow: 1px 1px 3px rgba(255, 150, 0, 0.8);
 }
 
 * {
@@ -217,6 +217,7 @@ body {
   background: var(--primary);
   box-shadow: var(--shadow);
   padding: 1.5rem 0.5rem;
+  border-radius: 5px;
 }
 .location img {
   padding: 0;
@@ -235,6 +236,7 @@ body {
   background: var(--primary);
   box-shadow: var(--shadow);
   padding: 1.5rem 0.5rem;
+  border-radius: 5px;
 }
 .mail img {
   padding-left: 10px;
@@ -250,6 +252,7 @@ body {
   background: var(--primary);
   box-shadow: var(--shadow);
   padding: 1.5rem 0.5rem;
+  border-radius: 5px;
 }
 .footer-img {
   background: var(--dark);
