--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 body {
   background: #ccc;
@@ -401,6 +402,21 @@ body {
   display: grid;
   align-items: center;
   justify-items: center;
+  grid-gap: 30px;
+}
+
+.horizontal {
+  border: 0;
+  width: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    #fd5e086b,
+    #fd5e086b,
+    rgba(0, 0, 0, 0)
+  );
+  height: 2px;
+  margin: 30px 0;
 }
 
 /* Product page */
